# shadowsocks-rust

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: build-and-test.yml  build-docker-image.yml  build-minimal.yml  build-msrv.yml  build-nightly-release.yml  build-release.yml  clippy-check.yml  deny-check.yml  test.yml
crates/shadowsocks/: Cargo.toml
crates/shadowsocks-service/: Cargo.toml
