[package]
name = "shadowsocks-service"
version = "1.23.0-midori-mar23"
authors = ["Shadowsocks Contributors"]
description = "shadowsocks is a fast tunnel proxy that helps you bypass firewalls."
repository = "https://github.com/midori01/shadowsocks-rust"
readme = "README.md"
documentation = "https://docs.rs/shadowsocks-service"
keywords = ["shadowsocks", "proxy", "socks", "socks5", "firewall"]
license = "MIT"
edition = "2024"
rust-version = "1.85"
[badges]
maintenance = { status = "passively-maintained" }
[features]
default = []
full = [
    "local",
    "server",
    "manager",
    "hickory-dns",
    "local-http",
    "local-redir",
    "local-tunnel",
    "local-socks4",
    "aead-cipher",
]
local = ["httparse"]
server = []
manager = ["server"]
hickory-dns = ["hickory-resolver", "shadowsocks/trust-dns"]
trust-dns = ["hickory-dns"]
dns-over-tls = [
    "hickory-dns",
    "hickory-resolver/tls-ring",
    "hickory-resolver/webpki-roots",
]
dns-over-https = [
    "hickory-dns",
    "hickory-resolver/https-ring",
    "hickory-resolver/webpki-roots",
]
dns-over-h3 = ["hickory-dns", "hickory-resolver/h3-ring"]
local-dns = ["local", "hickory-dns"]
local-dns-relay = ["local-dns"]
local-flow-stat = ["local"]
local-http = ["local", "hyper", "http", "http-body-util"]
local-http-native-tls = ["local-http", "tokio-native-tls", "native-tls"]
local-http-native-tls-vendored = [
    "local-http-native-tls",
    "tokio-native-tls/vendored",
    "native-tls/vendored",
]
local-http-rustls = [
    "local-http",
    "tokio-rustls",
    "webpki-roots",
    "rustls-native-certs",
]
local-redir = ["local"]
local-tunnel = ["local"]
local-socks4 = ["local"]
local-tun = ["local", "etherparse", "tun", "smoltcp"]
local-fake-dns = ["local", "trust-dns", "rocksdb", "bson"]
local-online-config = [
    "local",
    "local-http",
    "mime",
    "http",
    "flate2",
    "brotli",
    "zstd",
]
stream-cipher = ["shadowsocks/stream-cipher"]
aead-cipher = ["shadowsocks/aead-cipher"]
aead-cipher-extra = ["aead-cipher", "shadowsocks/aead-cipher-extra"]
aead-cipher-2022 = ["shadowsocks/aead-cipher-2022"]
aead-cipher-2022-extra = [
    "aead-cipher-2022",
    "shadowsocks/aead-cipher-2022-extra",
]
security-replay-attack-detect = ["shadowsocks/security-replay-attack-detect"]
[dependencies]
log = "0.4"
cfg-if = "1"
pin-project = "1.1"
once_cell = "1.17"
thiserror = "2.0"
arc-swap = "1.7"
spin = { version = "0.9" }
lru_time_cache = "0.11"
bytes = "1.7"
byte_string = "1.0"
byteorder = "1.5"
rand = { version = "0.9", features = ["small_rng"] }
rocksdb = { version = "0.23", optional = true }
futures = "0.3"
tokio = { version = "1.38", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "sync",
    "time",
] }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2.8", optional = true, features = ["alpn"] }
webpki-roots = { version = "0.26", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
rustls-native-certs = { version = "0.8", optional = true }
trait-variant = "0.1"
socket2 = { version = "0.5", features = ["all"] }
libc = "~0.2.141"
hyper = { version = "1.4", optional = true, features = ["full"] }
http-body-util = { version = "0.1", optional = true }
http = { version = "1.1", optional = true }
httparse = { version = "1.9", optional = true }
hickory-resolver = { version = "0.25", optional = true, features = ["serde"] }
idna = "1.0"
ipnet = "2.10"
iprange = "0.6"
regex = "1.4"
mime = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }
brotli = { version = "7.0", optional = true }
zstd = { version = "0.13", optional = true }
tun = { version = "0.7", optional = true, features = ["async"] }
etherparse = { version = "0.17", optional = true }
smoltcp = { version = "0.12", optional = true, default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-tcp-cubic",
] }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
bson = { version = "2.13.0", optional = true }
shadowsocks = { path = "../shadowsocks", default-features = false }
[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.29", features = ["ioctl"] }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }
[dev-dependencies]
byteorder = "1.5"
env_logger = "0.11"
[package.metadata.docs.rs]
features = [
    "full",
    "local-http-rustls",
    "local-dns",
    "dns-over-tls",
    "dns-over-https",
]
